--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         <a href="https://www.instagram.com/rithinvarma_03/"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                     </div>
-                    <a href="varma.pdf" class="btn btn2">Download CV</a>
+                    <a href="RithinVarma.pdf" class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
